@@ -308,6 +308,13 @@ homeInvite:
   # timeout (in seconds) for temporary invites
   timeout: 30
 
+  # set to true if you want /homeinviteaccept and /homeinviteteleport
+  # to use the same cooldown as /home. This respects any home-separation
+  # settings you have.
+  useHomeCooldown: true
+  # same as above, but for warmups
+  useHomeWarmup: true
+
   # set to false if you don't want to allow
   # players to send invite for bedHomes
   allowBedHomeInvites: true
