@@ -92,7 +92,7 @@ NO_HOME_INVITE_FOUND=No home invite found.
 PLAYER_NOT_FOUND=No player named "%player%" found.
 
 CMD_SETMAPSPAWN_SET_SUCCESS=You have successfully changed map spawn on %world% to %location%.
-CMD_HOME_INVITE_INVITE_SENT=You have sent an invite to player %player to your home named %home%.
+CMD_HOME_INVITE_INVITE_SENT=You have sent an invite to player %player% to your home named %home%.
 CMD_HOME_INVITE_TEMP_INVITE_SENT=You have sent an invite to player %player% to your home %home% (timeout %time% seconds).
 CMD_HOME_INVITE_EXPIRE_TIME_SET=Expire time for invite set to: %expire%
 CMD_HOME_INVITE_BAD_TIME=Did not understand time format "%badTime%". Try something like \"1d 4h\" or \"forever\"
