@@ -12,6 +12,9 @@ needs mass-testing so I'm looking forward to feedback on this feature.
 HSP in any way, just a general utility command)
 * added /groupquery command for troubleshooting group problems
 * added /homelistother command to list other people's homes
+* BREAKING CHANGE: old-style permission "hsp.command.xxx.use" no longer works; 
+use new-style "hsp.command.xxx" (old-style permission has been deprecated
+for a long time now, finally cleaning up the code)
 
 v1.4.4 - never released, merged into 1.5
 * fixed WorldGuard compatibility to work with newest WorldGuard 5.5 changes
